<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/navigation_home">

    <fragment
            android:id="@+id/navigation_home"
            android:name="ca.uwaterloo.cs349.RecognitionFragment"
            android:label="@string/title_home"
            tools:layout="@layout/fragment_recognition"/>

    <fragment
            android:id="@+id/navigation_library"
            android:name="ca.uwaterloo.cs349.LibraryFragment"
            android:label="@string/title_library"
            tools:layout="@layout/fragment_library">
        <action
            android:id="@+id/action_navigation_library_to_navigation_replace_gesture"
            app:destination="@id/navigation_replace_gesture" />
    </fragment>

    <fragment
            android:id="@+id/navigation_addition"
            android:name="ca.uwaterloo.cs349.AdditionFragment"
            android:label="@string/title_addition"
            tools:layout="@layout/fragment_addition"/>

    <fragment
            android:id="@+id/navigation_replace_gesture"
            android:name="ca.uwaterloo.cs349.AdditionFragment"
            android:label="@string/title_replace_gesture"
            tools:layout="@layout/fragment_addition"/>
</navigation>